force-app/main/default/objects/Contact/fields/Numero_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cuenta__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de cuenta</label>
    <type>Text</type>
</CustomField>