force-app/main/default/objects/Contact/fields/Solicitud2__c.field-meta.xml
<CustomField>
    <fullName>Solicitud2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud2</label>
    <referenceTo>Solicitud__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Solicitud_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>