force-app/main/default/objects/Contact/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_Solicitud</relationshipName>
    <type>Lookup</type>
</CustomField>